# beta

./: IMPLEMENTATION_NOTES.md  README.md  main.py  pyproject.toml  run.cmd
Instructions/: MASTER_PROMPT.md
Training Documents/: Reference Links for app v3.docx
docs/: USER_GUIDE.md
src/jwst_viewer/: __init__.py  __main__.py  mast_client.py  spectrum_loader.py  viewer.py  webapp.py
src/spectral_app/: __init__.py  models.py
src/spectral_app/analysis/: comparative.py
src/spectral_app/datafetch/: mast.py  nist.py
src/spectral_app/ingestion/: ascii_loader.py  fits_loader.py  loaders.py
src/spectral_app/interface/: streamlit_app.py
src/spectral_app/plotting/: plotly_view.py
src/spectral_app/utils/: export.py  units.py
tests/: test_ascii_loader.py  test_comparative.py  test_export.py  test_fits_loader.py  test_mast_client.py  test_nist_fetcher.py  test_plotting.py  test_spectrum_loader.py  test_units.py
tests/ingestion/: test_large_ascii_loader.py
