[project]
name = "jwst-viewer"
version = "0.1.0"
description = "JWST spectral viewer with MAST integration"
authors = [{name = "Beta User"}]
requires-python = ">=3.10"
dependencies = [
  "astroquery>=0.4.7",
  "astropy>=6.0",
  "specutils>=1.14",
  "plotly>=5.20",
  "fastapi>=0.110",
  "uvicorn>=0.27",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
