[project]
name = "spectral-analysis-app"
version = "0.1.0"
description = "Interactive spectral analysis toolkit"
authors = [{name = "Beta User"}]
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "astroquery>=0.4.7",
  "astropy>=6.0",
  "specutils>=1.14",
  "plotly>=5.20",
  "streamlit>=1.32",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
